05-kubernetes/exercises/configmap-secret.yaml
# ConfigMap and Secret Exercise
#
# OBJECTIVE: Create a ConfigMap and Secret, then use them in a Pod
#
# REQUIREMENTS:
# 1. ConfigMap with application config (database host, port, log level)
# 2. Secret with credentials (database username and password - base64 encoded)
# 3. Pod that mounts both as environment variables
#
# TODO: Complete the manifests below

---
# Pod using ConfigMap and Secret
apiVersion: v1
kind: Pod
metadata:
  name: # TODO: app-pod
spec:
  containers:
  - name: app
    image: busybox:latest
    command: ["sh", "-c", "env && sleep 3600"]
    # TODO: Add environment variables from ConfigMap
